tests/negative/no_semicolon.fc
// test: no-semicolon-test
// compile-fail: true
// exit-code: 1

void exit(int _);

void main(){
    exit(0)
}